force-app/main/default/objects/NotificationChannel__c/NotificationChannel__c.object-meta.xml
<CustomObject>
    <label>Notification Channel</label>
    <listViews>
        <fullName>RecentlyViewed</fullName>
        <columns>Rule__c</columns>
        <columns>Channel_Type__c</columns>
        <columns>Template__c</columns>
        <columns>Active__c</columns>
        <filterScope>RecentlyViewed</filterScope>
        <label>Recently Viewed</label>
    </listViews>
    <nameField>
        <displayFormat>NC-{0000}</displayFormat>
        <label>Notification Channel Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notification Channels</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>