force-app/main/default/objects/NotificationChannel__c/fields/Channel_Config__c.field-meta.xml
<CustomField>
    <fullName>Channel_Config__c</fullName>
    <label>Channel Config</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>