force-app/main/default/objects/NotificationChannel__c/fields/Rule__c.field-meta.xml
<CustomField>
    <fullName>Rule__c</fullName>
    <label>Rule</label>
    <referenceTo>NotificationRule__c</referenceTo>
    <relationshipLabel>Notification Channels</relationshipLabel>
    <relationshipName>Notification_Channels</relationshipName>
    <type>MasterDetail</type>
</CustomField>