force-app/main/default/objects/NotificationChannel__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Template</label>
    <referenceTo>NotificationTemplate__c</referenceTo>
    <relationshipLabel>Notification Channels</relationshipLabel>
    <relationshipName>Notification_Channels</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>