force-app/main/default/objects/NotificationChannel__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Rule__c</columns>
    <columns>Channel_Type__c</columns>
    <columns>Template__c</columns>
    <columns>Channel_Config__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>